# BioFXla

./: .gitignore  .gitmodules  AGENTS.md  README.md  check_env.sh  main.py  openfe-conda-lock.yml  pyproject.toml
data/processed/: fxia_clinical_trials_seed.csv  fxia_pdb_ids_seed.csv  fxia_pdb_interactions_seed.csv  fxia_scaffold_seed.csv  fxia_seed_summary.json
data/raw_public/: chembl_fxia_activities_page0.json  chembl_fxia_activities_page1000.json  chembl_fxia_activities_page10000.json  chembl_fxia_activities_page11000.json  chembl_fxia_activities_page12000.json  chembl_fxia_activities_page13000.json  chembl_fxia_activities_page2000.json  chembl_fxia_activities_page3000.json  chembl_fxia_activities_page4000.json  chembl_fxia_activities_page5000.json  chembl_fxia_activities_page6000.json  chembl_fxia_activities_page7000.json  chembl_fxia_activities_page8000.json  chembl_fxia_activities_page9000.json  chembl_fxia_assays_page0.json  chembl_molecule_CHEMBL4112929.json  chembl_molecule_CHEMBL4297583.json  chembl_molecule_asundexian_search.json  chembl_molecule_milvexian_search.json  chembl_target_factor_xia_search.json  clinicaltrials_asundexian.json  clinicaltrials_bay_2433334.json  clinicaltrials_bms_986177.json  clinicaltrials_milvexian.json  pubchem_asundexian_properties.json  (+2 more)
docs/: fxia_data_collection_workflow.md  mol_gen.md
reports/: fxia_data_collection_seed.md
tests/: test_filter_reinvent4_outputs.py  test_merge_generation_candidates.py  test_prepare_reinvent4_generation_inputs.py  test_rank_admet_docking_hits.py  test_select_docking_hits.py
(+558 files in other folders)
